[package]
name = "full-DH-with-sign"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
hkdf = "0.12"
sha2 = "0.10"
